# stapel-cdn

./: CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  README.md  SECURITY.md  __init__.py  actions.py  admin.py  apps.py  checks.py  conf.py  conftest.py  dto.py  errors.py  fetch.py  forms.py  functions.py  gdpr.py  models.py  pyproject.toml  ruff.toml  serializers.py  services.py  storage.py  tasks.py  upload_handlers.py  urls.py  urls_v1.py  validators.py  views.py  watermarks.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json
management/commands/: benchmark_imgproc.py  consume_cdn_events.py  regenerate_media.py
migrations/: 0001_initial.py  0002_image_variants_meta.py  0003_remove_video_variant_720_jpg.py  0004_alter_image_type_audio.py  __init__.py
tests/: test_admin.py  test_checks.py  test_commands.py  test_conf.py  test_file_exists_matrix.py  test_forms.py  test_functions.py  test_gdpr_actions.py  test_import_from_url.py  test_media_semantics.py  test_models.py  test_public_api.py  test_refs_sync.py  test_serializer_seams.py  test_serializers.py  test_services.py  test_signals.py  test_tasks.py  test_upload_endpoints.py  test_upload_handlers.py  test_views.py  urls.py
