[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-cdn"
version = "0.4.2"
description = "Media/CDN management Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "cdn", "media", "storage"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.3.0,<0.4",
    "Pillow>=9.0",
    "celery>=5",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
# libvips binding for image processing (lazily imported in tasks.py). Needs the
# system libvips library present at runtime (apt: libvips-dev).
images = ["pyvips>=2.2"]
all = ["stapel-cdn[s3,images]"]

[tool.setuptools]
package-dir = {"stapel_cdn" = "."}
packages = ["stapel_cdn", "stapel_cdn.management", "stapel_cdn.management.commands", "stapel_cdn.migrations", "stapel_cdn.tests"]

[tool.setuptools.package-data]
stapel_cdn = ["py.typed", "migrations/*.py", "schemas/**/*.json", "migrations/**/*.py"]

[tool.coverage.run]
omit = ["*/tests/*", "*/conftest.py", "*/migrations/*"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"
