[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-cdn"
version = "0.5.2"
description = "Media/CDN management Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "cdn", "media", "storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.10,<0.11",
    "Pillow>=9.0",
    "celery>=5",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-cdn"
Repository = "https://github.com/usestapel/stapel-cdn"
Documentation = "https://github.com/usestapel/stapel-cdn#readme"
Changelog = "https://github.com/usestapel/stapel-cdn/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-cdn/issues"

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
# libvips binding for image processing (lazily imported in tasks.py). Needs the
# system libvips library present at runtime (apt: libvips-dev).
images = ["pyvips>=2.2"]
all = ["stapel-cdn[s3,images]"]

[tool.setuptools]
package-dir = {"stapel_cdn" = "."}
packages = ["stapel_cdn", "stapel_cdn.management", "stapel_cdn.management.commands", "stapel_cdn.migrations"]

[tool.setuptools.package-data]
stapel_cdn = ["py.typed", "migrations/*.py", "schemas/**/*.json", "migrations/**/*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.coverage.run]
omit = ["*/tests/*", "*/conftest.py", "*/migrations/*"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"
